--- a/clases/flex/grid.scss
+++ b/clases/flex/grid.scss
@@ -14,7 +14,7 @@
         flex-wrap:wrap;
     }
     &.flex-direction{
-        flex-direction:column;
+        flex-direction:row-reverse;
     }
 }
 .columna{
@@ -44,3 +44,5 @@
         flex-shrink:80%;    
     }
 }
+
+
