--- a/TPs/1/assets/scss/theme.scss
+++ b/TPs/1/assets/scss/theme.scss
@@ -140,6 +140,12 @@ header {
     .blog {
         article {
             margin-bottom: 30px;
+            opacity: 0;
+            transition: opacity 1s;
+            transition-timing-function: ease-in-out;
+            &.in{
+                opacity: 1;
+            }
         }
     }
     .comments {
