--- a/parciales/practica1/assets/css/styles.css
+++ b/parciales/practica1/assets/css/styles.css
@@ -11,6 +11,10 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 table {
   border-collapse: collapse;
   width: 100%;
@@ -79,7 +83,6 @@ th,
 td,
 tr {
     display: block;
-    box-sizing: border-box;
   }
 
   table {
@@ -116,6 +119,36 @@ tr {
     text-transform: capitalize;
   }
 }
+.form {
+  width: 100%;
+  background: white;
+  -webkit-box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.5);
+  margin-bottom: 30px;
+  padding: 30px 20px;
+  border-radius: 5px;
+}
+.form .field {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 15px;
+}
+.form .field.radio, .form .field.checkbox {
+  flex-direction: row;
+}
+.form .field label {
+  font-weight: 300;
+  text-transform: capitalize;
+  margin-bottom: 3px;
+}
+.form .field select,
+.form .field input {
+  border-radius: 3px;
+  border: 1px solid grey;
+  padding: 3px 8px;
+}
+
 #container {
   width: 90%;
   margin: 30px 0;
