--- a/parciales/practica1/assets/scss/styles.scss
+++ b/parciales/practica1/assets/scss/styles.scss
@@ -1,4 +1,3 @@
-
 @import "./fragments/variables.scss";
 html,
 body {
@@ -10,9 +9,13 @@ body {
     background-image: linear-gradient(45deg, $colorBlue, $colorMagenta);
     display: flex;
     justify-content: center;
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
+}
+* {
+    box-sizing: border-box;
 }
 @import "./fragments/table.scss";
+@import "./fragments/form.scss";
 
 #container {
     width: 90%;
