--- a/parciales/practica1/assets/css/styles.css
+++ b/parciales/practica1/assets/css/styles.css
@@ -15,6 +15,67 @@ body {
   box-sizing: border-box;
 }
 
+#container {
+  width: 90%;
+  margin: 30px 0;
+}
+
+.loading {
+  position: fixed;
+  background: rgba(0, 0, 0, 0.3);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+}
+
+h1 {
+  color: white;
+  font-weight: 300;
+}
+
+button {
+  padding: 7px 25px;
+  border: none;
+  border-radius: 3px;
+  font-size: 14px;
+  background: #f2f2f2;
+  color: #36304a;
+}
+button.outline {
+  background: none;
+  border: 1px solid #ddd;
+}
+button.primary {
+  background: #e42861;
+  color: white;
+}
+button.primary.outline {
+  background: none;
+  color: #e42861;
+  border: 1px solid #e42861;
+}
+button.primary:active {
+  color: white;
+  background: #50343d;
+}
+button.secondary {
+  background: #4258d0;
+  color: white;
+}
+button.secondary.outline {
+  background: none;
+  color: #4258d0;
+  border: 1px solid #4258d0;
+}
+button.secondary:active {
+  color: white;
+  background: #36304a;
+}
+
 table {
   border-collapse: collapse;
   width: 100%;
@@ -99,7 +160,6 @@ tr {
   }
   table tr td {
     /* Behave  like a "row" */
-    border-bottom: 1px solid #eee;
     position: relative;
     padding-left: 50% !important;
     border: none;
@@ -120,7 +180,10 @@ tr {
   }
 }
 .form {
-  width: 100%;
+  position: absolute;
+  z-index: 500;
+  width: inherit;
+  display: flex;
   background: white;
   -webkit-box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.5);
   -moz-box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.5);
@@ -128,42 +191,74 @@ tr {
   margin-bottom: 30px;
   padding: 30px 20px;
   border-radius: 5px;
+  transition: max-height 500ms, padding 500ms;
+  transition-timing-function: ease-in-out;
+  max-height: 100%;
+  overflow: hidden;
+}
+.form.close {
+  max-height: 0;
+  padding: 0 20px;
+}
+.form h2 {
+  width: 100%;
+  margin-top: 0;
 }
 .form .field {
   display: flex;
-  flex-direction: column;
   margin-bottom: 15px;
 }
-.form .field.radio, .form .field.checkbox {
-  flex-direction: row;
-}
+.form .field p,
 .form .field label {
   font-weight: 300;
   text-transform: capitalize;
   margin-bottom: 3px;
 }
+.form .field textarea,
 .form .field select,
 .form .field input {
   border-radius: 3px;
   border: 1px solid grey;
   padding: 3px 8px;
-}
-
-#container {
-  width: 90%;
-  margin: 30px 0;
-}
-
-.loading {
-  position: fixed;
-  background: rgba(0, 0, 0, 0.3);
+  font-size: 14px;
+  font-weight: 300;
   width: 100%;
-  height: 100%;
+  max-width: 100%;
+  min-width: 100%;
+}
+.form .field.radio, .form .field.checkbox {
+  flex-direction: row;
+  align-content: flex-end;
+}
+.form .field.radio p, .form .field.checkbox p {
+  margin: 0 0 9px;
+  width: 100%;
+}
+.form .actions {
+  width: 100%;
+  margin-top: 15px;
   display: flex;
   justify-content: center;
-  top: 0;
-  left: 0;
-  z-index: 1000;
+}
+.form .actions button {
+  margin: 0 5px;
+}
+
+.form {
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.form .field {
+  width: 49%;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+@media only screen and (max-width: 760px) {
+  .form .field {
+    width: 100%;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
