--- a/parciales/practica1/assets/scss/fragments/form.scss
+++ b/parciales/practica1/assets/scss/fragments/form.scss
@@ -1,5 +1,9 @@
+
 .form {
-    width: 100%;
+    position: absolute;
+    z-index: 500;
+    width: inherit;
+    display: flex;
     background: white;
     -webkit-box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.5);
     -moz-box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.5);
@@ -7,26 +11,79 @@
     margin-bottom: 30px;
     padding: 30px 20px;
     border-radius: 5px;
+    transition: max-height 500ms, padding 500ms;
+    transition-timing-function: ease-in-out;
+    max-height: 100%;
+    overflow: hidden;
+
+    &.close{
+        max-height: 0;
+        padding: 0 20px;
+    }
+
+    h2{
+        width: 100%;
+        margin-top: 0;
+    }
     .field {
         display: flex;
-        flex-direction: column;
         margin-bottom: 15px;
 
-        &.radio,
-        &.checkbox {
-            flex-direction: row;
-        }
-        label{
-            
+        p,
+        label {
             font-weight: 300;
             text-transform: capitalize;
             margin-bottom: 3px;
         }
+        textarea,
         select,
         input {
             border-radius: 3px;
             border: 1px solid grey;
             padding: 3px 8px;
+            font-size: 14px;
+            font-weight: 300;
+            width: 100%;
+            max-width: 100%;
+            min-width: 100%;
+        }
+        &.radio,
+        &.checkbox {
+            flex-direction: row;
+            align-content: flex-end;
+            p{
+                margin: 0 0 9px;
+                width: 100%;
+            }
+        }
+    }
+    .actions{
+        width: 100%;
+        margin-top: 15px;
+        display: flex;
+        justify-content:center;
+        button{
+            margin: 0 5px;
+        }
+    }
+}
+
+.form {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    .field {
+        width: 49%;
+        flex-wrap: wrap;
+        // align-content:flex-end;
+        flex-direction: column;
+    }
+}
+
+@media only screen and (max-width: 760px) {
+    .form {
+        .field {
+            width: 100%;
         }
     }
 }
