--- a/parciales/practica1/assets/scss/fragments/table.scss
+++ b/parciales/practica1/assets/scss/fragments/table.scss
@@ -79,7 +79,7 @@ table {
             padding: 15px 6px;
             td {
                 /* Behave  like a "row" */
-                border-bottom: 1px solid #eee;
+                // border-bottom: 1px solid $colorBorder;
                 position: relative;
                 padding-left: 50% !important;
                 border: none;
