--- a/parciales/practica1/assets/scss/fragments/text.scss
+++ b/parciales/practica1/assets/scss/fragments/text.scss
@@ -1,48 +1,14 @@
 h1 {
     color: white;
     font-weight: 300;
+    display: flex;
+    justify-content: space-between;
 }
 
-button {
-    padding: 7px 25px;
-    border: none;
-    border-radius: 3px;
-    font-size: 14px;
-    background: $colorLigthgrey;
-    color: $colorBlueDark;
-
-    &.outline{
-        background:none;
-        border:1px solid $colorBorder;
-    }
-    &.primary {
-        background: $colorMagenta;
-        color: white;
-
-        &.outline {
-            background: none;
-            color: $colorMagenta;
-            border: 1px solid $colorMagenta;
-        }
-        &:active {
-            color: white;
-            background: $colorMagentaDark;
-        }
-    }
-    &.secondary {
-        background: $colorBlue;
-        color: white;
-
-        &.outline {
-            background: none;
-            color: $colorBlue;
-            border: 1px solid $colorBlue;
-        }
-        &:active {
-            color: white;
-            background: $colorBlueDark;
-        }
-    }
+h2 {
+    width: 100%;
+    margin-top: 0;
+    color: $colorMagenta;
 }
 
 // $colorBlue: #4258d0;
