--- a/parciales/practica1/assets/css/styles.css
+++ b/parciales/practica1/assets/css/styles.css
@@ -5,10 +5,18 @@ body {
   border: 0;
   width: 100%;
   min-height: 100%;
-  background-image: linear-gradient(45deg, #4258d0, #e42861);
+  height: auto;
+}
+
+body {
+  background-color: #4258d0;
+  background-image: linear-gradient(0deg, #4258d0, #e42861);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
   display: flex;
   justify-content: center;
   font-family: "Roboto", sans-serif;
+  overflow-y: scroll;
 }
 
 * {
@@ -18,6 +26,7 @@ body {
 #container {
   width: 90%;
   margin: 30px 0;
+  position: relative;
 }
 
 .loading {
@@ -35,45 +44,14 @@ body {
 h1 {
   color: white;
   font-weight: 300;
+  display: flex;
+  justify-content: space-between;
 }
 
-button {
-  padding: 7px 25px;
-  border: none;
-  border-radius: 3px;
-  font-size: 14px;
-  background: #f2f2f2;
-  color: #36304a;
-}
-button.outline {
-  background: none;
-  border: 1px solid #ddd;
-}
-button.primary {
-  background: #e42861;
-  color: white;
-}
-button.primary.outline {
-  background: none;
+h2 {
+  width: 100%;
+  margin-top: 0;
   color: #e42861;
-  border: 1px solid #e42861;
-}
-button.primary:active {
-  color: white;
-  background: #50343d;
-}
-button.secondary {
-  background: #4258d0;
-  color: white;
-}
-button.secondary.outline {
-  background: none;
-  color: #4258d0;
-  border: 1px solid #4258d0;
-}
-button.secondary:active {
-  color: white;
-  background: #36304a;
 }
 
 table {
@@ -181,8 +159,10 @@ tr {
 }
 .form {
   position: absolute;
+  width: 90%;
+  width: calc(100% - 50px);
+  right: 0;
   z-index: 500;
-  width: inherit;
   display: flex;
   background: white;
   -webkit-box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.5);
@@ -191,18 +171,14 @@ tr {
   margin-bottom: 30px;
   padding: 30px 20px;
   border-radius: 5px;
-  transition: max-height 500ms, padding 500ms;
+  transition: max-height 500ms, padding 500ms, top 100ms;
   transition-timing-function: ease-in-out;
-  max-height: 100%;
+  max-height: 200%;
   overflow: hidden;
 }
 .form.close {
   max-height: 0;
   padding: 0 20px;
-}
-.form h2 {
-  width: 100%;
-  margin-top: 0;
 }
 .form .field {
   display: flex;
@@ -214,6 +190,11 @@ tr {
   text-transform: capitalize;
   margin-bottom: 3px;
 }
+.form .field textarea {
+  width: 100%;
+  max-width: 100%;
+  min-width: 100%;
+}
 .form .field textarea,
 .form .field select,
 .form .field input {
@@ -222,9 +203,6 @@ tr {
   padding: 3px 8px;
   font-size: 14px;
   font-weight: 300;
-  width: 100%;
-  max-width: 100%;
-  min-width: 100%;
 }
 .form .field.radio, .form .field.checkbox {
   flex-direction: row;
@@ -241,7 +219,8 @@ tr {
   justify-content: center;
 }
 .form .actions button {
-  margin: 0 5px;
+  margin: 3px 5px;
+  min-height: 34px;
 }
 
 .form {
@@ -256,9 +235,70 @@ tr {
 }
 
 @media only screen and (max-width: 760px) {
+  .form {
+    width: 100%;
+  }
   .form .field {
     width: 100%;
   }
+  .form .actions {
+    flex-direction: column;
+  }
+}
+button {
+  padding: 7px 25px;
+  border: none;
+  border-radius: 3px;
+  font-size: 14px;
+  background: #f2f2f2;
+  color: #36304a;
+}
+button.outline {
+  background: none;
+  border: 1px solid #ddd;
+}
+button:disabled {
+  opacity: 0.5;
+}
+button.primary {
+  background: #e42861;
+  color: white;
+}
+button.primary.outline {
+  background: none;
+  color: #e42861;
+  border: 1px solid #e42861;
+}
+button.primary:active {
+  color: white;
+  background: #50343d;
+}
+button.secondary {
+  background: #4258d0;
+  color: white;
+}
+button.secondary.outline {
+  background: none;
+  color: #4258d0;
+  border: 1px solid #4258d0;
+}
+button.secondary:active {
+  color: white;
+  background: #36304a;
+}
+
+button.btnClose {
+  padding: 0;
+  border: none;
+  border-radius: 0;
+  font-size: 24px;
+  background: none;
+  color: #36304a;
+  position: absolute;
+  right: 12px;
+  top: 17px;
+  height: 34px;
+  width: 34px;
 }
 
 /*# sourceMappingURL=styles.css.map */
