--- a/parciales/practica1/assets/scss/fragments/form.scss
+++ b/parciales/practica1/assets/scss/fragments/form.scss
@@ -1,8 +1,9 @@
-
 .form {
     position: absolute;
+    width: 90%; //salvaguarda para navegadores que no reconocen calc()
+    width: calc(100% - 50px);
+    right: 0;
     z-index: 500;
-    width: inherit;
     display: flex;
     background: white;
     -webkit-box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.5);
@@ -11,20 +12,16 @@
     margin-bottom: 30px;
     padding: 30px 20px;
     border-radius: 5px;
-    transition: max-height 500ms, padding 500ms;
+    transition: max-height 500ms, padding 500ms, top 100ms;
     transition-timing-function: ease-in-out;
-    max-height: 100%;
+    max-height: 200%;
     overflow: hidden;
 
-    &.close{
+    &.close {
         max-height: 0;
         padding: 0 20px;
     }
 
-    h2{
-        width: 100%;
-        margin-top: 0;
-    }
     .field {
         display: flex;
         margin-bottom: 15px;
@@ -35,6 +32,11 @@
             text-transform: capitalize;
             margin-bottom: 3px;
         }
+        textarea{
+            width: 100%;
+            max-width: 100%;
+            min-width: 100%;
+        }
         textarea,
         select,
         input {
@@ -43,27 +45,25 @@
             padding: 3px 8px;
             font-size: 14px;
             font-weight: 300;
-            width: 100%;
-            max-width: 100%;
-            min-width: 100%;
         }
         &.radio,
         &.checkbox {
             flex-direction: row;
             align-content: flex-end;
-            p{
+            p {
                 margin: 0 0 9px;
                 width: 100%;
             }
         }
     }
-    .actions{
+    .actions {
         width: 100%;
         margin-top: 15px;
         display: flex;
-        justify-content:center;
-        button{
-            margin: 0 5px;
+        justify-content: center;
+        button {
+            margin: 3px 5px;
+            min-height: 34px;
         }
     }
 }
@@ -82,8 +82,12 @@
 
 @media only screen and (max-width: 760px) {
     .form {
+        width: 100%;
         .field {
             width: 100%;
+        }
+        .actions {
+            flex-direction: column;
         }
     }
 }
