--- a/parciales/practica1/assets/css/styles.css
+++ b/parciales/practica1/assets/css/styles.css
@@ -171,18 +171,26 @@ tr {
   margin-bottom: 30px;
   padding: 30px 20px;
   border-radius: 5px;
+  height: auto;
+  max-height: 500%;
   transition: max-height 500ms, padding 500ms, top 100ms;
   transition-timing-function: ease-in-out;
-  max-height: 200%;
   overflow: hidden;
 }
 .form.close {
   max-height: 0;
   padding: 0 20px;
 }
+.form .fieldContainer {
+  width: 100%;
+  display: flex;
+}
 .form .field {
   display: flex;
   margin-bottom: 15px;
+}
+.form .field.w-100 {
+  width: 100% !important;
 }
 .form .field p,
 .form .field label {
@@ -223,11 +231,13 @@ tr {
   min-height: 34px;
 }
 
+.fieldContainer,
 .form {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
 }
+.fieldContainer .field,
 .form .field {
   width: 49%;
   flex-wrap: wrap;
@@ -235,13 +245,16 @@ tr {
 }
 
 @media only screen and (max-width: 760px) {
-  .form {
+  .fieldContainer,
+.form {
     width: 100%;
   }
-  .form .field {
+  .fieldContainer .field,
+.form .field {
     width: 100%;
   }
-  .form .actions {
+  .fieldContainer .actions,
+.form .actions {
     flex-direction: column;
   }
 }
