--- a/parciales/practica1/assets/scss/fragments/form.scss
+++ b/parciales/practica1/assets/scss/fragments/form.scss
@@ -12,19 +12,26 @@
     margin-bottom: 30px;
     padding: 30px 20px;
     border-radius: 5px;
+    height: auto;
+    max-height: 500%;
     transition: max-height 500ms, padding 500ms, top 100ms;
     transition-timing-function: ease-in-out;
-    max-height: 200%;
     overflow: hidden;
 
     &.close {
         max-height: 0;
         padding: 0 20px;
     }
-
+    .fieldContainer{
+        width: 100%;
+        display: flex;
+    }
     .field {
         display: flex;
         margin-bottom: 15px;
+        &.w-100{
+            width: 100%!important;
+        }
 
         p,
         label {
@@ -68,6 +75,8 @@
     }
 }
 
+
+.fieldContainer,
 .form {
     flex-direction: row;
     flex-wrap: wrap;
@@ -81,6 +90,7 @@
 }
 
 @media only screen and (max-width: 760px) {
+    .fieldContainer,
     .form {
         width: 100%;
         .field {
