--- a/parciales/practica1/assets/scss/fragments/form.scss
+++ b/parciales/practica1/assets/scss/fragments/form.scss
@@ -22,15 +22,16 @@
         max-height: 0;
         padding: 0 20px;
     }
-    .fieldContainer{
+    .fieldContainer {
         width: 100%;
         display: flex;
     }
     .field {
         display: flex;
         margin-bottom: 15px;
-        &.w-100{
-            width: 100%!important;
+
+        &.w-100 {
+            width: 100% !important;
         }
 
         p,
@@ -39,7 +40,7 @@
             text-transform: capitalize;
             margin-bottom: 3px;
         }
-        textarea{
+        textarea {
             width: 100%;
             max-width: 100%;
             min-width: 100%;
@@ -52,11 +53,19 @@
             padding: 3px 8px;
             font-size: 14px;
             font-weight: 300;
+            min-height: 28px;
         }
         &.radio,
         &.checkbox {
             flex-direction: row;
             align-content: flex-end;
+            input {
+                min-height: unset;
+                margin-left: 0;
+            }
+            label{
+                margin-right: 8px;
+            }
             p {
                 margin: 0 0 9px;
                 width: 100%;
@@ -75,7 +84,7 @@
     }
 }
 
-
+// responsive relative
 .fieldContainer,
 .form {
     flex-direction: row;
@@ -84,7 +93,6 @@
     .field {
         width: 49%;
         flex-wrap: wrap;
-        // align-content:flex-end;
         flex-direction: column;
     }
 }
