--- a/parciales/practica1/assets/scss/fragments/text.scss
+++ b/parciales/practica1/assets/scss/fragments/text.scss
@@ -10,9 +10,6 @@ h2 {
     margin-top: 0;
     color: $colorMagenta;
 }
-
-// $colorBlue: #4258d0;
-// $colorBlueDark: #36304a;
-// $colorMagenta: #e42861;
-// $colorMagentaLigth: #f792b0;
-// $colorMagentaDark: #50343d;
+.hidden{
+    display:none;
+}
