filtrar columnas y buscar en textos

--- a/parciales/parcial2_mat/server/public/src/scss/fragments/table.scss
+++ b/parciales/parcial2_mat/server/public/src/scss/fragments/table.scss
@@ -20,7 +20,7 @@ table {
         background: #36304a;
         color: white;
         font-weight: 300;
-        text-transform: capitalize;
+        // text-transform: capitalize;
         &:first-child {
             border-radius: 5px 0 0 0;
         }
