--- a/parciales/parcial2_mat/server/public/src/scss/fragments/text.scss
+++ b/parciales/parcial2_mat/server/public/src/scss/fragments/text.scss
@@ -16,7 +16,12 @@ h3 {
     font-weight: 300;
     display: flex;
     justify-content: space-between;
-    align-items: flex-end;
+    align-items: center;
+    font-size: 28px;
+}
+
+h4 {
+    margin-top: 0;
 }
 p {
     color: white;
