--- a/parciales/parcial2_mat/server/public/src/scss/fragments/filters.scss
+++ b/parciales/parcial2_mat/server/public/src/scss/fragments/filters.scss
@@ -3,10 +3,25 @@
     background: white;
     padding: 15px;
     border-radius: 5px;
+    
+    .actions {
+        width: 100%;
+        margin-top: 15px;
+        display: flex;
+        justify-content: center;
+        button {
+            margin: 3px 5px;
+            min-height: 34px;
+        }
+    }
 }
 #f_columns{
     display: flex; 
     flex-wrap: wrap;
+    margin-bottom: 10px;
+    .field{
+        margin-bottom: 0;
+    }
     label{
         color: white;
     }
